<resources>
    <string name="app_name">SCADE</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">SCADE</string>
    <string name="title_information">Information</string>
    <string name="title_history">History</string>
    <string name="splash_check_1">Check Your Skin</string>
    <string name="splash_check_2">Get the result with only ONE capture</string>
    <string name="start">Start Now</string>
    <string name="spot_location">Spot Location</string>
    <string name="example">Right Arm</string>
    <string name="show_result">Show Result</string>
    <string name="splash_hospital_1">Find a Hospital</string>
    <string name="splash_hospital_2">Know nearest hospital from your location</string>
    <string name="splash_hospital_3">Find Other Hospital</string>
    <string name="find_hospital">Find a Hospital</string>
    <string name="title">Title</string>
    <string name="title_hospital">Hospital Title</string>
    <string name="location_hospital">Hospital Location</string>
    <string name="result">Result</string>
    <string name="your_last_check_up">Your Last Check Up</string>
    <string name="information_title">Know more about Skin Cancer</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In fermentum diam eu diam pulvinar malesuada. Cras ultrices ipsum id ultricies tincidunt. Maecenas id diam quis sem lacinia luctus at et velit. Maecenas efficitur lectus at eros euismod, sed auctor enim blandit. Aliquam pretium mauris sed lacus sollicitudin dapibus. Nulla orci sapien, vulputate id tortor commodo, pellentesque semper purus. Etiam eget sagittis velit, vitae aliquam lacus. Cras nec ante sem. Fusce sodales, magna eget rhoncus viverra, est ipsum elementum nibh, eget vehicula augue ante eu ligula. Vivamus consequat sodales suscipit. Maecenas a aliquam lorem. Donec libero velit, faucibus tempus luctus sed, mollis eu nunc. Pellentesque convallis tincidunt mauris, sit amet imperdiet dui rhoncus id. Curabitur sagittis pellentesque neque vitae ultricies. Cras efficitur non ante et porta. Cras in ultrices risus. Duis porttitor vestibulum metus eu lobortis. Nulla non velit mauris. Nulla arcu nulla, mattis ac consequat ac, bibendum ac elit. Praesent id dictum est, quis pharetra mauris. Morbi placerat sem eget consectetur tempor. Aenean consectetur urna et eros dictum, id cursus lacus scelerisque. Etiam sit amet euismod augue, id convallis nisi. Fusce vestibulum lectus dolor. Sed ullamcorper, massa vel bibendum mollis, lacus velit efficitur mi, vulputate malesuada risus tellus quis elit. Nullam dapibus, libero ac congue congue, nibh urna fringilla turpis, dignissim sagittis massa velit ac tellus. Proin euismod dui at mollis aliquam. Sed auctor venenatis orci a maximus. Ut ac nisl vel ipsum mattis tincidunt. Nullam suscipit ultrices elit eget placerat. Sed luctus dui vel massa tincidunt sagittis. Quisque orci nisi, aliquam quis finibus quis, tincidunt non magna. Cras faucibus ut tellus cursus cursus. Nulla facilisi. Sed velit leo, porta scelerisque ligula quis, suscipit congue magna. Quisque dictum laoreet sodales. Nam vestibulum mauris libero, vitae placerat enim ultrices in. Donec et consequat quam. Phasellus mauris erat, cursus sed enim in, suscipit mattis est. Nulla nec dolor eget lectus pharetra varius. Sed facilisis non sem nec hendrerit. Curabitur quis nulla eget eros condimentum interdum. Aliquam erat volutpat. In finibus metus eget magna dictum mattis. Vivamus viverra, libero pellentesque fermentum auctor, dolor ex convallis tellus, vel congue dolor dui nec urna. Quisque quis scelerisque quam, non dapibus lectus. Suspendisse blandit bibendum eros, eget venenatis diam molestie sed. Pellentesque maximus pharetra porta. Maecenas at vehicula arcu, quis sagittis eros. Nunc vitae nibh egestas, facilisis erat eu, posuere turpis.</string>
    <string name="file_null">Please Insert Image First</string>
    <string name="history_booking">Your Last Check Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="error_message">Something went wrong</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="retype_password">Retype Password</string>
    <string name="session_end">Session expired, please login again</string>
    <string name="booking">Booking a Hospital</string>
    <string name="send">Send</string>
    <string name="booking_hospital">You have booked the hospital</string>
    <string name="back_to_home">Back to Home</string>
    <string name="email_not_valid">Invalid email format</string>
    <string name="password_not_same">Password not same</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_not_valid">Invalid phone number</string>
    <string name="password_not_valid">Less than 6 character</string>
    <string name="error_login">Wrong Email or Password</string>
    <string name="double_tap_message">Please click BACK again to exit</string>
    <string name="error_internet">You don\'t have an internet connection</string>
    <string name="edit_text_empy_error">Field cannot be blank</string>
    <string name="name_spot">Name Spot</string>
    <string name="cancer_diagnosed">Diagnosed Skin Cancer</string>
    <string name="name_cancer">Name Cancer</string>
    <string name="hospital">The hospital to be booked</string>
    <string name="name_hospital">Name Hospital</string>
    <string name="location">Location</string>
    <string name="create_booking">Create Booking</string>
    <string name="user_referral_letter">User Referral Letter</string>
    <string name="phone">Phone</string>
    <string name="user_last_referral_letter">Your Last Referral Letter</string>
    <string name="change_hospital">Change Hospital</string>
    <string name="detail_history">Detail History</string>
    <string name="update_hospital_detail">Update Detail</string>
    <string name="update_hospital">Update Hospital</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="title_article">This is Title</string>
</resources>