<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/res_main_splash"
        app:layout_constraintBottom_toTopOf="@+id/edit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_address"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/name"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="8dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/address"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="8dp"
        android:hint="@string/address"
        android:inputType="text"
        android:padding="8dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/edit_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/retype_password"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="8dp"
        android:hint="@string/retype_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:paddingStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>